[package]
name = "membase-csgo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Memflow
memflow = "0.1.5"
memflow-win32 = "0.1.5"

# Data related
dataview = "0.1.2"
toml = "0.5.8"

# Maths
libm = "0.2.1"

# For the websocket
tungstenite = "0.14.0"

# Logging
log = "0.4.14"
simplelog = "0.11.1"